Updated Saxon to 12.8